--- a/Login.html
+++ b/Login.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>නිපුනි සංගීත කලාආයතනයය</title>
+    <title>test</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="Web.js"></script>
 </head>
 <body>
-    <h1>This is a login page </h1>
+    <div class="box1">
+        <div class="head">
+            <span>Hellow User &#10003</span><br>
+        </div>
+        <div class="text">
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni temporibus eum sapiente at quibusdam ducimus delectus doloribus! Mag</span>
+        </div>
+        <div class="button">
+            <button class="button1"><a class="link1" href="http://www.google.com">News</a></button>
+            
+        </div>
+    </div>
+    <div class="button">
+        <!-- <button class="button1" title="Sign-In">Log-In >></button> -->
+    </div>
+    <div class="image">
+        <div class="firsImage">
+            <button class="btn2"  type="button">Photo</button>
+        </div>
+    </div>
 </body>
 </html>
